fixing text align in CV and about section, replacing activity table over all time with activity table over last year and updating CV (temproarily)

--- a/src/Main/home/home.css
+++ b/src/Main/home/home.css
@@ -180,6 +180,7 @@
         animation: none;
         margin: 2rem 5% 0 5%;
         width: 90%;
+        text-align: center;
     }
 
     .social-media a {
