--- a/src/index.css
+++ b/src/index.css
@@ -269,10 +269,6 @@ section {
 /*768px*/
 /*768px*/
 @media (max-width: 768px) {
-    * {
-        text-align: center;
-    }
-    
     html {
         font-size: 75%;
     }
